--- a/examples/foa-renderer.html
+++ b/examples/foa-renderer.html
@@ -66,14 +66,16 @@
       foaRenderer = Omnitone.createFOARenderer(audioContext, {
         // The example audio is in the FuMa ordering (W,X,Y,Z). So remap the
         // channels to the ACN format.
-        resourcePath: '../build/resources/',
+        hrirPathList: [
+          '../build/resources/omnitone-foa-1.wav',
+          '../build/resources/omnitone-foa-2.wav'],
         channelMap: [0, 3, 1, 2]
       });
 
       selectSource = document.getElementById('eSelectSource');
       buttonPlayback = document.getElementById('eButtonPlayback');
       buttonBypass = document.getElementById('eButtonBypass');
-      
+
       selectSource.onchange = function (event) {
         audioElement.src = audioSources[event.target.value];
         audioElement.load();
@@ -99,7 +101,7 @@
           event.target.textContent = 'Ambisonic';
           foaRenderer.setRenderingMode('ambisonic');
         }
-      };      
+      };
 
       foaRenderer.initialize().then(function () {
         selectSource.disabled = false;
