--- a/examples/index.html
+++ b/examples/index.html
@@ -14,19 +14,33 @@
 -->
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Omnitone: Exmaples</title>
-  <script src="../build/omnitone.min.js"></script>
-  <link rel="stylesheet" href="example.css">
-</head>
-<body>
-  <h1>Omnitone Examples</h1>
-  <ul>
-    <li><a href="foa-decoder.html">FOADecoder (First-order ambisoincs, Legacy)</a></li>
-    <li><a href="foa-renderer.html">FOARenderer (First-order ambisonics, Optimized rendering)</a></li>
-    <li><a href="hoa-renderer.html">HOARenderer (Higher-order ambisonics, Optimized rendering)</a></li>
-    <li><a href="gamepad.html">Omnitone with Gamepad API</a></li>
-  </ul>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>
+      Omnitone: Exmaples
+    </title>
+    <link rel="stylesheet" href="example.css">
+  </head>
+  <body>
+    <h1>
+      Omnitone Examples
+    </h1>
+    <ul>
+      <li>
+        <a href="foa-decoder.html">FOADecoder (First-order ambisoincs,
+        Legacy)</a>
+      </li>
+      <li>
+        <a href="foa-renderer.html">FOARenderer (First-order ambisonics,
+        Optimized rendering)</a>
+      </li>
+      <li>
+        <a href="hoa-renderer.html">HOARenderer (Higher-order ambisonics,
+        Optimized rendering)</a>
+      </li>
+      <li>
+        <a href="gamepad.html">Omnitone with Gamepad API</a>
+      </li>
+    </ul>
+  </body>
 </html>
