--- a/examples/hoa-renderer.html
+++ b/examples/hoa-renderer.html
@@ -19,7 +19,6 @@
     <title>
       Example: HOARenderer
     </title>
-    <script src="audiocontext-shim.js"></script>
     <script src="../build/omnitone.min.js"></script>
     <link rel="stylesheet" href="example.css">
   </head>
@@ -63,6 +62,12 @@
           "-60" max="24" value="0" step="1">
         </dd>
       </dl><button id="eButtonPlayback" disabled>Play</button>
+    </div>
+    <div id="footer">
+      <p>
+        Found something broken? <a href=
+        "https://github.com/GoogleChrome/omnitone/issues">File an issue.</a>
+      </p>
     </div>
     <script>
     (function () {
