--- a/examples/index.html
+++ b/examples/index.html
@@ -27,10 +27,6 @@
     </h1>
     <ul>
       <li>
-        <a href="foa-decoder.html">FOADecoder (First-order ambisoincs,
-        Legacy)</a>
-      </li>
-      <li>
         <a href="foa-renderer.html">FOARenderer (First-order ambisonics,
         Optimized rendering)</a>
       </li>
@@ -40,6 +36,15 @@
       </li>
       <li>
         <a href="gamepad.html">Omnitone with Gamepad API</a>
+      </li>
+    </ul><br>
+    <p>
+      The example below uses a deprecated API and is only for the reference
+      purpose.
+    </p>
+    <ul>
+      <li>
+        <a href="foa-decoder.html">FOADecoder (Deprecated)</a>
       </li>
     </ul>
   </body>
