Fixed landing page

--- a/src/omnitone-home.html
+++ b/src/omnitone-home.html
@@ -41,6 +41,7 @@
         margin: 0;
         padding-top: 70px;
         padding-bottom: 80px;
+        box-shadow: inset 0 -5px 20px #263238;
       }
 
       .section.title h1 {
@@ -49,6 +50,7 @@
         line-height: 72px;
         margin: 20px 0;
         padding: 0;
+        text-shadow: 0px 1px 2px #000;
       }
 
       .section.title h2 {
@@ -218,14 +220,16 @@
 
     <div class="section title">
       <h1>Omnitone</h1>
-      <h2>Spatial Audio on the Web</h2>
+      <h2>Spatial Audio Rendering on the Web</h2>
     </div>
 
     <div class="section text">
-      <p><strong>Omnitone</strong> is a JavaScript implementation of a 
-        <strong>first-order ambisonic</strong> decoder that allows you to
+      <p>
+        <strong>Omnitone</strong> is a JavaScript implementation of an 
+        <strong>ambisonic</strong> decoder that also allows you to
         <strong>binaurally render</strong> an ambisonic recording directly on
-        the browser.</p>
+        the browser.
+      </p>
       <p>
         <a href="https://travis-ci.org/GoogleChrome/omnitone"><img src="https://img.shields.io/travis/GoogleChrome/omnitone.svg"></a> 
         <a href="https://www.npmjs.com/package/omnitone"><img src="https://img.shields.io/npm/v/omnitone.svg?colorB=4bc51d"></a>
