--- a/examples/hoa-renderer.html
+++ b/examples/hoa-renderer.html
@@ -147,7 +147,7 @@
         rotationMatrix3[7] = forward[1];
         rotationMatrix3[8] = forward[2];
 
-        eButtonAmbisonicOrder.textContent === '3rd order'
+        eButtonAmbisonicOrder.textContent === '3rd Order'
             ? toaRenderer.setRotationMatrix3(rotationMatrix3)
             : soaRenderer.setRotationMatrix3(rotationMatrix3);
       }
