--- a/examples/foa-renderer.html
+++ b/examples/foa-renderer.html
@@ -28,9 +28,7 @@
     </h1>
     <p>
       <code>FOARenderer</code> is an optimized ambisonic renderer based on the
-      integrated convolution (SH-MaxRe HRIR). Although this renderer does not
-      offer a complete configurable signal path, it outperforms
-      <code>FOADecoder</code> by 100%.
+      integrated convolution (SH-MaxRe HRIR).
     </p>
     <p>
       See <a href="https://github.com/GoogleChrome/omnitone#foarenderer">more
