--- a/examples/index.html
+++ b/examples/index.html
@@ -27,12 +27,11 @@
     </h1>
     <ul>
       <li>
-        <a href="foa-renderer.html">FOARenderer (First-order ambisonics,
-        Optimized rendering)</a>
+        <a href="foa-renderer.html">FOARenderer (1st-order ambisonics)</a>
       </li>
       <li>
-        <a href="hoa-renderer.html">HOARenderer (Higher-order ambisonics,
-        Optimized rendering)</a>
+        <a href="hoa-renderer.html">HOARenderer (2nd and 3rd-order ambisonics)
+        </a>
       </li>
       <li>
         <a href="gamepad.html">Omnitone with Gamepad API</a>
