--- a/examples/index.html
+++ b/examples/index.html
@@ -34,6 +34,10 @@
         </a>
       </li>
       <li>
+        <a href="hoa-renderer-opus.html">
+          HOA player (ambisonic audio file player)</a>
+      </li>
+      <li>
         <a href="gamepad.html">Omnitone with Gamepad API</a>
       </li>
     </ul>
