--- a/examples/index.html
+++ b/examples/index.html
@@ -30,8 +30,10 @@
         <a href="foa-renderer.html">FOARenderer (1st-order ambisonics)</a>
       </li>
       <li>
-        <a href="hoa-renderer.html">HOARenderer (2nd and 3rd-order ambisonics)
-        </a>
+        <a href="hoa-renderer.html">HOARenderer (2nd/3rd-order ambisonics)</a>
+      </li>
+      <li>
+        <a href="es6-module.html">ES6 module support</a>
       </li>
       <li>
         <a href="gamepad.html">Omnitone with Gamepad API</a>
